<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_gravity="center"

        android:layout_marginBottom="140dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:id="@+id/timofte_serban_profile_fragment_iv"

            android:layout_gravity="center"
            android:background="#0000FF"
            android:src="@drawable/baseline_person_24"
            android:layout_margin="8dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/timofte_serban_profile_fragment_ti_name"

            android:layout_gravity="center"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/timofte_serban_profile_fragment_ti_salary"

            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="50dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_salary" />
        </com.google.android.material.textfield.TextInputLayout>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/timofte_serban_profile_fragment_rb"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_profile_fragment_btn_save"
        android:text="@string/profile_save"

        android:layout_gravity="bottom |center_horizontal"
        android:layout_marginBottom="88dp"
        />

</FrameLayout>