<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_expense_ti_date"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_margin="8dp"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/timofte_serban_add_tiet_date"

        android:hint="Date"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_ti_amount"

        app:layout_constraintTop_toBottomOf="@+id/timofte_serban_add_expense_ti_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/timofte_serban_add_tiet_amount"

            android:hint="@string/add_amount"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_tv_category"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_ti_amount"

        android:layout_margin="8dp"

        android:text="@string/add_category"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_expense_spinner_category"

        android:layout_margin="8dp"
        android:minHeight="48dp"

        android:entries="@array/add_expense_array_category"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_tv_category"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_ti_description"

        android:layout_margin="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timofte_serban_add_expense_spinner_category"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/timofte_serban_add_expense_tiet_description"

            android:hint="@string/add_description"
            />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/timofte_serban_add_expense_btn_save"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_margin="64dp"

        android:text="@string/add_save"

        />
</androidx.constraintlayout.widget.ConstraintLayout>